plogapp/tests/errors/WrongSortExprInAttlDecl.plog
sorts
#s = {a}.
#s2 = f(#s).
attributes
f: #s2 -> #s3.
statements

